<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dataengine</groupId>
    <artifactId>parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <properties>
        <revision>0.3</revision>

        <!-- params -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <!-- packages -->
        <jsr305.version>3.0.2</jsr305.version>
        <spark.version>3.0.0</spark.version>
        <scala.major.version>2.12</scala.major.version>
        <fasterxml.jackson.version>2.10.0</fasterxml.jackson.version>
        <junit.version>5.6.2</junit.version>
        <lombok.version>1.18.12</lombok.version>
    </properties>

    <modules>
        <module>spark-test</module>
        <module>spark-extensions</module>
        <module>pipeline-runtime</module>
        <module>pipeline-model</module>
        <module>pipeline-model-builder</module>
        <module>pipeline-runtime-builder</module>
    </modules>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/gabrielenizzoli/spark_engine</url>
        </repository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>

            <!-- modules -->
            <dependency>
                <groupId>dataengine</groupId>
                <artifactId>spark-extensions</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>dataengine</groupId>
                <artifactId>pipeline-runtime</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>dataengine</groupId>
                <artifactId>pipeline-model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>dataengine</groupId>
                <artifactId>pipeline-builder</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>dataengine</groupId>
                <artifactId>pipeline-model-builder</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- packages -->
            <dependency>
                <groupId>com.google.code.findbugs</groupId>
                <artifactId>jsr305</artifactId>
                <version>${jsr305.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.spark</groupId>
                <artifactId>spark-sql_${scala.major.version}</artifactId>
                <version>${spark.version}</version>
            </dependency>

            <!-- packages: fasterxml -->
            <dependency>
                <groupId>com.fasterxml.jackson.dataformat</groupId>
                <artifactId>jackson-dataformat-yaml</artifactId>
                <version>${fasterxml.jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${fasterxml.jackson.version}</version>
            </dependency>

            <!-- packages: testing -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>dataengine</groupId>
                <artifactId>spark-test</artifactId>
                <version>${project.version}</version>
                <scope>test</scope>
            </dependency>


        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <environmentVariables>
                        <HADOOP_HOME>${project.parent.basedir}/hadoop</HADOOP_HOME>
                    </environmentVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
